# vsb-pai-game-of-life

./: README.md
gol-omp/: CMakeLists.txt  README.md
gol-omp/src/: RuleLengthEncoded.cpp  RuleLengthEncoded.h  main.cpp  patterns.cpp  patterns.h  utils.cpp  utils.h
gol-py/: README.md
gol-py/src/: gol.py  main.py  patterns.py  rle.py
gol-rs/: Cargo.toml  README.md
gol-rs/patterns/: n_glider_loop.rle
gol-rs/src/: main.rs  patterns.rs  utils.rs
gol-ts/: .gitignore  .prettierignore  .prettierrc.json  README.md  index.html  package.json  vite.config.ts
gol-ts/src/: crypto.d.ts  gol-worker.ts  main.ts  patterns.ts  rel.ts  style.css  utils.ts
